更新 CHANGELOG.md，新增多个 Java 相关最佳实践文档，包括开发环境配置、JVM 垃圾回收机制、JVM 调优、内存模型和并发编程。同时，为相关文档添加作者信息以保持一致性，并修正部分标题格式。